# iran-polymarket-tracker

./: .gitignore  CLAUDE.md  DEPLOY.md  SPEC.md  dev_server.py  fetch_summary.py  pyproject.toml  screenshot.py
docs/: index.html
docs/css/: styles.css
docs/js/: api.js  app.js  charts.js  config.js  data.js
iran_dashboard/: api.py  app.py  callbacks.py  data.py  joy_plot.py  layout.py
worker/: worker.js  wrangler.toml
