[project]
name = "iran-dashboard"
version = "0.1.0"
description = "Dashboard for US-Iran strike probabilities from Polymarket"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]

[project.scripts]
iran-dashboard = "iran_dashboard.app:main"
